tests/build/fail/widget_new/cannot_unset_in_when.stderr
error: cannot `unset!` properties in `when` blocks
 --> $DIR/cannot_unset_in_when.rs:8:22
  |
8 |             margin = unset!;
  |                      ^^^^^
